--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Atsushi Toda <todaatsushi0@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+Django = "^3.2.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
