--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Atsushi Toda <todaatsushi0@gmail.com>"]
 python = "^3.8"
 Django = "^3.2.8"
 pre-commit = "^2.15.0"
+isort = "^5.9.3"
+black = "^21.9b0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
