--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^3.2.8"
 pre-commit = "^2.15.0"
 isort = "^5.9.3"
 black = "^21.9b0"
+django-extensions = "^3.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
