--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pre-commit = "^2.15.0"
 isort = "^5.9.3"
 black = "^21.9b0"
 django-extensions = "^3.1.3"
+flake8 = "^3.9.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
