--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ isort = "^5.9.3"
 black = "^21.9b0"
 django-extensions = "^3.1.3"
 flake8 = "^3.9.2"
+geocoder = "^1.38.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
